<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="edu.rosehulman.rafinder.controller.DutyRosterFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/weekendTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dates_default"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@mipmap/ic_edit"
            android:id="@+id/editButton" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/friTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/friNameTextView"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:text="@string/fri"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/friNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/satNameTextView"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|left"
            android:text="@string/name_default"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/friCallButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:background="@mipmap/ic_phone_green" />

        <TextView
            android:id="@+id/satTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/satNameTextView"
            android:layout_alignTop="@+id/satNameTextView"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:text="@string/sat"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/satNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/friNameTextView"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/satTextView"
            android:gravity="center_vertical|left"
            android:text="@string/name_default"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/satCallButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/satNameTextView"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:background="@mipmap/ic_phone_green" />
    </RelativeLayout>

</LinearLayout>
