<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="edu.rosehulman.rafinder.controller.student.StudentDutyRosterFragment">

    <TextView
        android:id="@+id/weekendTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="36sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/friTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/friCallButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:text="@string/fri"
            android:textSize="25sp"
            android:layout_weight=".2" />

        <TextView
            android:id="@+id/friNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/friCallButton"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_toLeftOf="@id/friCallButton"
            android:layout_toRightOf="@id/friTextView"
            android:gravity="center_vertical|left"
            android:text="@string/name_default"
            android:textSize="30sp"
            android:layout_weight=".65" />

        <ImageButton
            android:id="@+id/friCallButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:background="@mipmap/ic_phone_green"
            android:layout_weight=".07" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/satTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/callButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:text="@string/sat"
            android:textSize="25sp"
            android:layout_weight=".2" />

        <TextView
            android:id="@+id/satNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/satCallButton"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_toLeftOf="@id/satCallButton"
            android:layout_toRightOf="@id/satTextView"
            android:gravity="center_vertical|left"
            android:text="@string/name_default"
            android:textSize="30sp"
            android:layout_weight=".65" />

        <ImageButton
            android:id="@+id/satCallButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:background="@mipmap/ic_phone_green"
            android:layout_weight=".07" />
    </LinearLayout>

</LinearLayout>
